# libzap

./: .gitignore  .gitmodules  CMakeLists.txt  build_android_ios.sh  install_requirements.sh  libzap.djinni  run_djinni.sh
builds/: build_android_abis.sh  cmake_common_android.sh  cmake_lib_android.sh  cmake_lib_ios.sh  cmake_testapp_android.sh  cmake_testapp_linux.sh  cmake_testapp_mac_brew.sh  cmake_testapp_win_msys2.sh  combine_ios_libs.sh
src/: CMakeLists.txt  Info.plist  IntResult.java  SpendTx.java  Tx.java  WavesPaymentRequest.java  build_android_lib.sh  build_android_makefiles.sh  build_ios_makefiles.sh  combine_ios_libs.sh  test.c  zap.c  zap.h  zap_jni.c  zap_jni.java
test/: CMakeLists.txt  cmake_mac_brew.sh  cmake_win_msys2.sh  test.c  test.cpp
waves-c/src/: CMakeLists.txt
waves-c/src/crypto/base58/: base58.c
